--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container" >
     <div class="gallery">
         <div class="panel active" style="background-image:url(img/img1.jpeg);" onclick="activeClass()">
-            <h2>El Giza</h2>
+            <h2>The pharaonic statues</h2>
         </div>
 
         
     <div class="panel" style="background-image:url(img/img2.jpeg);">
-            <h2>the Nile cruise</h2>
+            <h2>The Nile cruise</h2>
         </div>
     
     <div class="panel" style="background-image:url(img/img3.jpeg);">
